Moved Request functions to a common module.

--- a/templates/login.html
+++ b/templates/login.html
@@ -88,6 +88,7 @@
         </div>
     </div>
 
+    <script src="{{ url_for('static', filename='js/requests.js') }}"></script>
     <script src="{{ url_for('static', filename='js/login.js') }}"></script>
 </body>
 </html>
